--- a/Assets/Tests/org/ethasia/adventuregrid/core/items/equipment/slottypes/SlotTypesTests/SlotTypesTests.asmdef
+++ b/Assets/Tests/org/ethasia/adventuregrid/core/items/equipment/slottypes/SlotTypesTests/SlotTypesTests.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "EquipmentClassesTests",
+    "name": "SlotTypesTests",
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
