--- a/Assets/Tests/org/ethasia/adventuregrid/ioadapters/presenters/chunks/ChunkPresentingTests/ChunkPresentingTests.asmdef
+++ b/Assets/Tests/org/ethasia/adventuregrid/ioadapters/presenters/chunks/ChunkPresentingTests/ChunkPresentingTests.asmdef
@@ -1,9 +1,11 @@
 {
     "name": "ChunkPresentingTests",
+    "rootNamespace": "",
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "GameAssembly"
+        "GameAssembly",
+        "PresentersMocks"
     ],
     "includePlatforms": [
         "Editor"
