Added CoastlineGenerator tests for some trivial cases

--- a/Assets/Tests/org/ethasia/adventuregrid/core/environment/mapgen/MapGenTests/MapGenTests.asmdef
+++ b/Assets/Tests/org/ethasia/adventuregrid/core/environment/mapgen/MapGenTests/MapGenTests.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "GameAssembly"
+        "GameAssembly",
+        "MathMocks",
+        "CoreTests"
     ],
     "includePlatforms": [
         "Editor"
